--- a/.github/workflows/buildpages.yml
+++ b/.github/workflows/buildpages.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: '14'
       - name: Run build script
         run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git checkout -B pages
           ./scripts/buildpages.sh
           git add -A
