--- a/.github/workflows/buildpages.yml
+++ b/.github/workflows/buildpages.yml
@@ -17,8 +17,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git checkout -B pages
           ./scripts/buildpages.sh
           git add -A
           git commit -m 'build pages'
-          git push
+          git push --set-upstream origin pages
